Add enable-hdmi20 property to iGPU device to fix gIOScreenLockState 3 error

--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -305,6 +305,10 @@
 			<dict>
 				<key>AAPL,ig-platform-id</key>
 				<data>AAAbWQ==</data>
+				<key>enable-hdmi20</key>
+				<data>
+				AQAAAA==
+				</data>
 			</dict>
 		</dict>
 		<key>Delete</key>
