Update ROM property with real en0 mac address

--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -1533,9 +1533,7 @@
 			<key>ProcessorType</key>
 			<integer>0</integer>
 			<key>ROM</key>
-			<data>
-			ESIzRFVm
-			</data>
+			<data>6GpkUJIH</data>
 			<key>SpoofVendor</key>
 			<true/>
 			<key>SystemMemoryStatus</key>
