--- a/EFI/OC/Kexts/Sinetek-rtsx.kext/Contents/Info.plist
+++ b/EFI/OC/Kexts/Sinetek-rtsx.kext/Contents/Info.plist
@@ -3,69 +3,79 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>16F73</string>
+	<string>19E287</string>
 	<key>CFBundleDevelopmentRegion</key>
-	<string>English</string>
+	<string>en</string>
 	<key>CFBundleExecutable</key>
-	<string>VoodooSDHC</string>
-	<key>CFBundleIconFile</key>
-	<string>me.jpg</string>
+	<string>Sinetek-rtsx</string>
 	<key>CFBundleIdentifier</key>
-	<string>VoodooSDHC</string>
+	<string>com.sinet3k.Sinetek-rtsx</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>VoodooSDHC</string>
+	<string>Sinetek-rtsx</string>
 	<key>CFBundlePackageType</key>
 	<string>KEXT</string>
-	<key>CFBundleSignature</key>
-	<string>Voodoo</string>
+	<key>CFBundleShortVersionString</key>
+	<string>2.3</string>
 	<key>CFBundleSupportedPlatforms</key>
 	<array>
 		<string>MacOSX</string>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>1.1d1</string>
+	<string>7</string>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>8E3004b</string>
+	<string>11E608c</string>
 	<key>DTPlatformVersion</key>
 	<string>GM</string>
 	<key>DTSDKBuild</key>
-	<string>16E185</string>
+	<string>17A315g</string>
 	<key>DTSDKName</key>
-	<string>macosx10.12</string>
+	<string>macosx10.13</string>
 	<key>DTXcode</key>
-	<string>0833</string>
+	<string>1150</string>
 	<key>DTXcodeBuild</key>
-	<string>8E3004b</string>
+	<string>11E608c</string>
 	<key>IOKitPersonalities</key>
 	<dict>
-		<key>SD Card Host Controller</key>
+		<key>Sinetek_rtsx</key>
 		<dict>
+			<key>CFBundleIdentifier</key>
+			<string>com.sinet3k.Sinetek-rtsx</string>
 			<key>IOClass</key>
-			<string>VoodooSDHC</string>
+			<string>Sinetek_rtsx</string>
+			<key>IOKitDebug</key>
+			<integer>65535</integer>
 			<key>IOPCIMatch</key>
-			<string>0x08221180</string>
+			<string>0x520910EC 0x522710EC 0x522910EC 0x522A10EC 0x524910EC 0x528610EC 0x528710EC 0x528910EC 0x525A10EC</string>
+			<key>IOProbeScore</key>
+			<integer>1000</integer>
 			<key>IOProviderClass</key>
 			<string>IOPCIDevice</string>
 		</dict>
 	</dict>
+	<key>LSMinimumSystemVersion</key>
+	<string>10.13</string>
+	<key>NSHumanReadableCopyright</key>
+	<string>Copyright © 2017 sinetek (modified by cholonam). All rights reserved.</string>
 	<key>OSBundleLibraries</key>
 	<dict>
 		<key>com.apple.iokit.IOPCIFamily</key>
-		<string>2.6</string>
+		<string>2.9</string>
 		<key>com.apple.iokit.IOStorageFamily</key>
-		<string>1.6</string>
+		<string>2.1</string>
+		<key>com.apple.kpi.bsd</key>
+		<string>16.4</string>
 		<key>com.apple.kpi.iokit</key>
-		<string>8.0.0</string>
+		<string>16.4</string>
 		<key>com.apple.kpi.libkern</key>
-		<string>8.0.0</string>
+		<string>16.4</string>
 		<key>com.apple.kpi.mach</key>
-		<string>8.0.0</string>
+		<string>16.4</string>
+		<key>com.apple.kpi.unsupported</key>
+		<string>8.0</string>
 	</dict>
-	<key>OSBundleRequired</key>
-	<string>Root</string>
 </dict>
 </plist>
