--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -1224,6 +1224,8 @@
 			<false/>
 			<key>PickerMode</key>
 			<string>External</string>
+			<key>PickerVariant</key>
+			<string>Modern</string>
 			<key>PollAppleHotKeys</key>
 			<false/>
 			<key>ShowPicker</key>
